尝试修复管理员登陆
